WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31323
Fix a few compiler warnings
https://bugs.webkit.org/show_bug.cgi?id=31323
Summary
Fix a few compiler warnings
Laszlo Gombos
Reported
2009-11-10 15:38:13 PST
QtWebKit built on Linux using GCC 4.4 reports the following compiler warnings: WebCore/editing/htmlediting.cpp: In function bool WebCore::isRenderedAsNonInlineTableImageOrHR(const WebCore::Node*): WebCore/editing/htmlediting.cpp:1087: warning: suggest parentheses around && within || WebKit/qt/tests/qwebframe/tst_qwebframe.cpp: In member function virtual QNetworkReply* FakeNetworkManager::createRequest(QNetworkAccessManager::Operation, const QNetworkRequest&, QIODevice*): WebKit/qt/tests/qwebframe/tst_qwebframe.cpp:2241: warning: suggest explicit braces to avoid ambiguous else
Attachments
proposed patch
(2.87 KB, patch)
2009-11-10 16:02 PST
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2009-11-10 16:02:44 PST
Created
attachment 42905
[details]
proposed patch
WebKit Commit Bot
Comment 2
2009-11-11 06:45:47 PST
Comment on
attachment 42905
[details]
proposed patch Clearing flags on attachment: 42905 Committed
r50806
: <
http://trac.webkit.org/changeset/50806
>
WebKit Commit Bot
Comment 3
2009-11-11 06:45:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug