2009-11-11  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        https://bugs.webkit.org/show_bug.cgi?id=31323
        Fix a few compiler warnings

        No new tests as there is no new functionality.

        * editing/htmlediting.cpp:
        (WebCore::isRenderedAsNonInlineTableImageOrHR): Use explicit
        parentheses to silence gcc 4.4 -Wparentheses warnings
2009-11-11  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        https://bugs.webkit.org/show_bug.cgi?id=31323
        Fix a few compiler warnings

        * tests/qwebframe/tst_qwebframe.cpp: Add extra brackets
        to make it explicit where the else case belongs

git-svn-id: svn://svn.chromium.org/blink/trunk@50806 bbb929c8-8fbe-4397-9dbb-9b2b20218538